--- a/TODO.txt
+++ b/TODO.txt
@@ -28,6 +28,60 @@ formatting           >= 6.3.6
 
 
 
+
+
+
+
+--------------------------------------------------
+-- Extensions ------------------------------------
+--------------------------------------------------
+
+{-# LANGUAGE CPP #-}
+
+--------------------------------------------------
+
+{-# LANGUAGE MagicHash      #-}
+
+--------------------------------------------------
+-- Includes --------------------------------------
+--------------------------------------------------
+
+#include "MachDeps.h"
+
+--------------------------------------------------
+
+import qualified "base" GHC.Int as GHC
+
+--------------------------------------------------
+-- Utilities -------------------------------------
+--------------------------------------------------
+
+int64_to_int :: Int64 -> Int
+#if WORD_SIZE_IN_BITS == 64
+int64_to_int (GHC.I64# i) = (GHC.I# i)
+#else
+int64_to_int (GHC.I64# i) = (GHC.I# (GHC.int64ToInt# i))
+#endif
+
+{-# INLINEABLE int64_to_int #-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 --------------------------------------------------
 
 ------------------------------
@@ -74,6 +128,12 @@ flag examples
 
 
 
+
+
+
+
+
+
 --------------------------------------------------
 -- Imports: (Internal) Project Libraries ---------
 --------------------------------------------------
@@ -96,6 +156,19 @@ import "exceptions" Control.Monad.Catch (MonadThrow(..))
 --------------------------------------------------
 -- Imports: Standard Library ---------------------
 --------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
